# AoAPC

./: CMakeLists.txt  README.md  new-chapter.sh
ch1/: 1-1.c  1-15.c  CMakeLists.txt  ex1-1.c  ex1-2.c  ex1-3.c  test.c
ch2/: 2-1.c  2-4.c  2-5.c  2-9.c  CMakeLists.txt  ex2-1.c  ex2-2.c  ex2-3.c  ex2-4.c  ex2-5.c  ex2-6.c  test.c
