add_executable(1-1 1-1.c)
add_executable(1-2 1-2.c)
add_executable(1-3 1-3.c)
add_executable(1-4 1-4.c)
add_executable(1-5 1-5.c)
add_executable(1-6 1-6.c)
add_executable(1-7 1-7.c)
add_executable(1-8 1-8.c)
add_executable(1-9 1-9.c)
add_executable(1-10 1-10.c)
add_executable(1-11 1-11.c)
add_executable(1-12 1-12.c)
add_executable(1-13 1-13.c)
add_executable(1-14 1-14.c)
add_executable(1-15 1-15.c)
add_executable(ex1-1 ex1-1.c)
add_executable(ex1-2 ex1-2.c)
add_executable(ex1-3 ex1-3.c)
add_executable(ex1-4 ex1-4.c)
add_executable(ex1-5 ex1-5.c)
add_executable(ex1-6 ex1-6.c)
add_executable(ex1-7 ex1-7.c)
add_executable(test1 test.c)
