add_executable(2-1 2-1.c)
add_executable(2-2 2-2.c)
add_executable(2-3 2-3.c)
add_executable(2-4 2-4.c)
add_executable(2-5 2-5.c)
add_executable(2-6 2-6.c)
add_executable(2-7 2-7.c)
add_executable(2-8 2-8.c)
add_executable(2-9 2-9.c)
add_executable(2-10 2-10.c)
add_executable(2-11 2-11.c)
add_executable(2-12 2-12.c)
add_executable(ex2-1 ex2-1.c)
add_executable(ex2-2 ex2-2.c)
add_executable(ex2-3 ex2-3.c)
add_executable(ex2-4 ex2-4.c)
add_executable(ex2-5 ex2-5.c)
add_executable(ex2-6 ex2-6.c)
add_executable(test2 test.c)
